Update print statement from 'Hello' to 'Goodbye'

--- a/menuprincipal.html
+++ b/menuprincipal.html
@@ -150,9 +150,9 @@
 
             .user-dropdown {
               position: absolute;
-              top: calc(100% + 8px); /* espaço abaixo do botão */
-              left: 50%; /* âncora no meio do botão */
-              transform: translateX(-100%); /* centra horizontalmente */
+              top: calc(100% + 8px);
+              left: 50%; 
+              transform: translateX(-100%);
               background: #ffffff;
               color: #333;
               padding: 15px;
